--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p><p>&copy; 2025 AI Emailový Agent | Vytvořil <a href="https://stejdesign.cz" target="_blank" rel="noopener noreferrer" style="color: white;">stejdesign.cz</a></p></p>
+                <p><p>&copy; 2025 AI Emailový Agent | Vytvořil <a href="aaa" target="_blank" rel="noopener noreferrer" style="color: white;">stejdesign.cz</a></p></p>
             </div>
         </div>
     </footer>
@@ -755,4 +755,5 @@
     </script>
 </body>
 </html>
+
 
