--- a/login.html
+++ b/login.html
@@ -679,7 +679,7 @@
         <div class="container">
             <div class="header-content">
                  <a href="#" class="logo">AI Emailový Agent</a>
-                <a href="home.html" class="back-link">← Zpět na hlavní stránku</a>
+                <a href="index.html" class="back-link">← Zpět na hlavní stránku</a>
             </div>
         </div>
     </header>
@@ -1014,6 +1014,7 @@
 
 </body>
 </html>
+
 
 
 
