--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p><p>&copy; 2025 AI Emailový Agent | Vytvořil <a href="aaa" target="_blank" rel="noopener noreferrer" style="color: white;"></a></p></p>
+                <p><p>&copy; 2025 AI Emailový Agent | Vytvořil stejdesign.cz <a href="https://www.stejdesign.cz/" target="_blank" rel="noopener noreferrer" style="color: white;"></a></p></p>
             </div>
         </div>
     </footer>
@@ -748,3 +748,4 @@
     </script>
 </body>
 </html>
+
