--- a/index.html
+++ b/index.html
@@ -660,7 +660,12 @@
             </div>
             
             <div class="footer-bottom">
-                <p><p>&copy; 2025 AI Emailový Agent | Vytvořil stejdesign.cz <a href="https://www.stejdesign.cz/" target="_blank" rel="noopener noreferrer" style="color: white;"></a></p></p>
+                <p>
+  © 2025 AI Emailový Agent | Vytvořil 
+  <a href="https://www.stejdesign.cz/" target="_blank" rel="noopener noreferrer" style="color: white;">
+    stejdesign.cz
+  </a>
+</p>
             </div>
         </div>
     </footer>
@@ -748,4 +753,5 @@
     </script>
 </body>
 </html>
+
 
