--- a/index.html
+++ b/index.html
@@ -712,46 +712,8 @@
                 <a href="login.html" class="cta-button">Začít zdarma</a>
 
                 <div class="dashboard-mockup-container fade-in">
-                    <div class="dashboard-mockup">
-                        <div class="mockup-header">
-                            <div class="mockup-dot dot-red"></div>
-                            <div class="mockup-dot dot-yellow"></div>
-                            <div class="mockup-dot dot-green"></div>
-                        </div>
-                        <div class="mockup-content">
-                            <div class="mockup-sidebar">
-                                <div class="mockup-line" style="width: 60%"></div>
-                                <div class="mockup-line" style="width: 80%"></div>
-                                <div class="mockup-line" style="width: 70%"></div>
-                            </div>
-                            <div class="mockup-main">
-                                <div class="mockup-card">
-                                    <div class="mockup-dot" style="background: #e2e8f0; width: 40px; height: 40px;">
-                                    </div>
-                                    <div style="flex: 1">
-                                        <div class="mockup-line" style="width: 40%"></div>
-                                        <div class="mockup-line" style="width: 70%; height: 6px;"></div>
-                                    </div>
-                                </div>
-                                <div class="mockup-card">
-                                    <div class="mockup-dot" style="background: #e2e8f0; width: 40px; height: 40px;">
-                                    </div>
-                                    <div style="flex: 1">
-                                        <div class="mockup-line" style="width: 30%"></div>
-                                        <div class="mockup-line" style="width: 60%; height: 6px;"></div>
-                                    </div>
-                                </div>
-                                <div class="mockup-card">
-                                    <div class="mockup-dot" style="background: #e2e8f0; width: 40px; height: 40px;">
-                                    </div>
-                                    <div style="flex: 1">
-                                        <div class="mockup-line" style="width: 50%"></div>
-                                        <div class="mockup-line" style="width: 80%; height: 6px;"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="dashboard_screen.png" alt="Dashboard Preview"
+                        style="width: 100%; max-width: 900px; height: auto; display: block; margin: 0 auto; border-radius: 16px; box-shadow: 0 25px 50px rgba(0,0,0,0.3);">
                 </div>
             </div>
         </div>
